--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ nav a:hover::after {
 .link {
   text-decoration: none;
   color: #000;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .stats-box {
@@ -147,6 +147,10 @@ nav a:hover::after {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 1s ease;
+}
+.card img:hover {
+  transform: scale(1.2);
 }
 
 .card.tall {
